--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>Angular Blog App</h1>
+<app-header></app-header>
+<h1 class = "text-primary">Angular Blog App</h1>
+
+<h2>{{title}}</h2>
+<h3>{{title}}</h3>
+<h4>{{title}}</h4>
+
+
+
+<router-outlet></router-outlet>
