--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<header class=" navbar navbar-exapnd-lg fixed-top bg-white">
+
+    <div class=" container justify-content-center">
+        <a href="#" class="site-logo"> ANG-BLOG</a>
+    </div>
+</header>
