--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <app-header></app-header>
 
-<h2>{{title}}</h2>
-<h3>{{title}}</h3>
-<h4>{{title}}</h4>
-
-
+<app-category-navbar></app-category-navbar>
 
 <router-outlet></router-outlet>
