--- a/src/app/subscription-form/subscription-form.component.html
+++ b/src/app/subscription-form/subscription-form.component.html
@@ -1,1 +1,25 @@
-<p>subscription-form works!</p>
+<div class="card shadow-effect">
+    <div class="card-body">
+        <div class="text-center mt-3 mt-5">
+            <h3>SUNSCRIPTION FORM</h3>
+            <p class="m-auto subs-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam iste omnis repudiandae amet, fugiat velit aliquam minus rem obcaecati ratione ab tempore maiores consectetur iure aliquid deleniti! Dolore, ipsa pariatur. </p>
+
+            <form action="" class="form-inline mb-5 mt-5">
+
+                <div class="form-group col-md-5">
+                    <input type="text" class="form-control shadow-effect" placeholder="Your Name">
+                </div>
+
+                <div class="form-group col-md-5">
+                    <input type="email" class="form-control shadow-effect" placeholder="Email Address">
+                </div>
+
+                <div class="col-md-2">
+                    <button class="btn btn-info btn-block btn-sub">SUBSCRIBE</button>
+                </div>
+
+            </form>
+
+        </div>
+    </div>
+</div>
