--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,12 @@ body{
     color: var(--body-text-color);
 
 }
+.site-logo{
+    border-radius: 20px;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+}
+.shadow-effect{
+    border: none;
+    box-shadow: 0px 0px 33px -10px rgba(71, 114, 254, 0.3);
+}
