--- a/src/app/comments/comment-form/comment-form.component.html
+++ b/src/app/comments/comment-form/comment-form.component.html
@@ -1,1 +1,20 @@
-<p>comment-form works!</p>
+<div class="card mt-5 shadow-effect">
+    <div class="card-body">
+        <h4>Leave a comment</h4>
+        <p>You can leave a comment using this comment form</p>
+
+        <form>
+            <div class="form-group">
+                <label for="">Name</label>
+                <input type="text" class="form-control shadow-effect" placeholder="Enter tour name here">
+            </div>
+
+            <div class="form-group">
+                <label for="">Comment</label>
+                <textarea name="" id="" cols="30" rows="10" class="form-control shadow-effect" placeholder="Add your comment here"></textarea>
+            </div>
+
+            <button class="btn btn-info btn-theme">Add a comment </button>
+        </form>
+    </div>
+</div>
