--- a/src/app/comments/comment-list/comment-list.component.html
+++ b/src/app/comments/comment-list/comment-list.component.html
@@ -1,1 +1,42 @@
-<p>comment-list works!</p>
+<div class="card mb-5 mt-5 pb-5 shadow-effect">
+    <div class="card-body">
+        <h4 class="mt-3 mb-3">comments (15,345)</h4>
+
+        <div class="comment-box mt-3">
+            <h6 class="mb-0"> John Doe</h6>
+            <small class="text-danger">LAST UPDATED - JULY 20, 2023</small>
+            <div class="mt-3 mb-3">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores velit praesentium veritatis ullam, consectetur soluta placeat perferendis expedita incidunt quo explicabo dicta distinctio quasi cupiditate, dolorum iste a iusto pariatur.
+            </div>
+
+            <a href="" class="mt-1"> Reply</a>
+            <a href="" class="mt-1 mt-3">View Reply</a>
+
+            <hr>
+        </div>
+        <div class="comment-box mt-3">
+            <h6 class="mb-0"> John Doe</h6>
+            <small class="text-danger">LAST UPDATED - JULY 20, 2023</small>
+            <div class="mt-3 mb-3">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores velit praesentium veritatis ullam, consectetur soluta placeat perferendis expedita incidunt quo explicabo dicta distinctio quasi cupiditate, dolorum iste a iusto pariatur.
+            </div>
+
+            <a href="" class="mt-1"> Reply</a>
+            <a href="" class="mt-1 mt-3">View Reply</a>
+
+            <hr>
+        </div>
+        <div class="comment-box mt-3">
+            <h6 class="mb-0"> John Doe</h6>
+            <small class="text-danger">LAST UPDATED - JULY 20, 2023</small>
+            <div class="mt-3 mb-3">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores velit praesentium veritatis ullam, consectetur soluta placeat perferendis expedita incidunt quo explicabo dicta distinctio quasi cupiditate, dolorum iste a iusto pariatur.
+            </div>
+
+            <a href="" class="mt-1"> Reply</a>
+            <a href="" class="mt-1 mt-3">View Reply</a>
+
+            <hr>
+        </div>
+    </div>
+</div>
