--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -1,1 +1,35 @@
-<p>single-post works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <div class="card shadow-effect">
+                <img src="https://images.pexels.com/photos/262508/pexels-photo-262508.jpeg?auto=compress&cs=tinysrgb&w=600"
+                 alt="" class="card-img-top img-fluid">
+                 <div class="card-body">
+                    <small class="bg-light text-danger text-center"> Design</small>
+                    <small class="bg-light text-success text-center ml-2"> Featured</small>
+                    <small class="bg-light text-info text-center ml-2"> views</small>
+                    <small class="bg-light text-warning text-center ml-2"> LAST UPDATED - JULY 20, 2023</small>
+
+                    <h1 class="mt-3 mb-3">HOW TO START A BLOG IN 2021</h1>
+
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, nesciunt! Ducimus culpa voluptates vel debitis cumque fugit incidunt, in sit aperiam placeat enim vero repellat deserunt, corporis error! Porro, est.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio omnis mollitia voluptatum ratione ea commodi deserunt nihil atque cum at nesciunt, modi ipsam neque, dolores corrupti facere iure, enim quaerat!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, explicabo ipsam unde in, quisquam odit culpa incidunt recusandae officia architecto aliquid aliquam cumque nemo tempore facere vitae laboriosam quo labore!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero porro debitis saepe nostrum laboriosam explicabo rem error harum aperiam ea nemo dolorum quibusdam, exercitationem soluta, expedita repudiandae impedit, vel ex!
+                    </P>
+
+                 </div>
+            </div>
+
+            <app-comment-form></app-comment-form>
+            <app-comment-list></app-comment-list>
+        </div>
+        <div class="col-md-3">
+            <app-post-card></app-post-card>
+            <app-post-card></app-post-card>
+            <app-post-card></app-post-card>
+            <app-post-card></app-post-card>
+
+        </div>
+    </div>
+</div>
