--- a/src/app/pages/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/pages/terms-and-conditions/terms-and-conditions.component.html
@@ -1,6 +1,6 @@
 <section class="mt-5">
     <div class="container mt-5 mb-5 p-5 bg-theme">
-        <h1 class="text-white text-center "> About Us</h1>
+        <h1 class="text-white text-center "> Terms & Conditions</h1>
 
         <div class="p-5 mt-4 bg-secondary-theme text-theme-primary">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione ex ducimus perspiciatis illum delectus fuga asperiores hic consequuntur inventore, eaque ea sapiente, obcaecati iure quasi. Sit aperiam libero inventore voluptate?</p>
